--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yap": "^0.0.2",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
